@@ -1,14 +1,14 @@
 plugins {
     id 'java-library'
-    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
     id "org.sonarqube" version "2.8"
     id 'jacoco'
 }
 
 version '8.0'
 
-/*sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14*/
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
@@ -17,8 +17,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.github.Anuken.Arc:arc-core:-SNAPSHOT'
-    compileOnly 'com.github.Anuken.Mindustry:core:-SNAPSHOT'
+    compileOnly 'com.github.Anuken.Arc:arc-core:v104.6'
+    compileOnly 'com.github.Anuken.Mindustry:core:v104.6'
     implementation 'com.github.PersonTheCat:hjson-java:master'
     implementation 'de.svenkubiak:jBCrypt:0.4.1'
     implementation('net.dv8tion:JDA:4.1.1_141') {
@@ -29,10 +29,12 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:1.7.30'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-    testImplementation 'com.github.Anuken.Mindustry:server:-SNAPSHOT'
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testCompile 'com.github.Anuken.Arc:arc-core:v104.6'
+    testCompile 'com.github.Anuken.Mindustry:core:v104.6'
+    testCompile 'com.github.Anuken.Mindustry:server:v104.6'
+    testCompile group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
-    testImplementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+    testCompile group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
 
 }
 
@@ -56,7 +58,6 @@ sourceSets{
 
 compileJava {
     options.encoding = "UTF-8"
-    options.compilerArgs += ["--enable-preview"]
 }
 
 configurations.all {
@@ -65,7 +66,6 @@ configurations.all {
 
 test {
     testLogging.showStandardStreams = true
-    jvmArgs '--enable-preview'
 }
 
 sonarqube {
